[tool.poetry]
name = "experiments"
version = "0.1.0"
description = "Experiments"
authors = ["stefantb <stefanttb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyside6 = "^6.5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 120
ignore = "E302"

[tool.pyright]
venvPath = "."
venv = ".venv"

